licenseUploadPod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: swag-licenses
  labels:
    pod: swag-licenses
  namespace: cicd
spec:
  containers:
  - name: license-upload
    image: busybox:latest
    command:
    - sleep
    - "100m"
    volumeMounts:
    - name: swag-license-keys
      mountPath: /licenses
  volumes:
  - name: swag-license-keys
    hostPath:
      path: "/tmp/license"
