terracotta.yaml

apiVersion: v1
kind: Service
metadata:
  name: terracotta
  namespace: swag-infra
  labels:
    app: terracotta
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
    - name: terracotta-port
      port: 9410
    - name: sync-port
      port: 9430
  selector:
    app: terracotta
  clusterIP: None
#  type: ClusterIP

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: terracotta
  namespace: swag-infra
  labels:
    app: terracotta
spec:
  selector:
    matchLabels:
      app: terracotta
  serviceName: terracotta
  replicas: 1
  template:
    metadata:
      labels:
        app: terracotta
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: terracotta
          image: store/softwareag/terracotta-server:10.11
          command: ["bin/start-tc-server.sh"]
          args: ["-f", "/configs/tc-config.xml", "-n", "terracotta"]
          imagePullPolicy: Always
          resources:
            requests:
              memory: 4Gi
          ports:
            - containerPort: 9410
              name: terracotta-port
            - containerPort: 9430
              name: sync-port
          volumeMounts:
            - name: config-volume
              mountPath: /configs
            - name: dataroots
              mountPath: /data/dataroots
        - name: readiness
          image: store/softwareag/terracotta-cluster-tool:10.11
          command: ["sh", "-c", "while true; do sleep 86400; done"]
          imagePullPolicy: Always
          readinessProbe:
            exec:
              command: ["bash", "-c", "bin/cluster-tool.sh status -s terracotta.swag-infra"]
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            # 10,000 as failure threshold gives around 41 hours of time to load from FRS and start terracotta successfully.
            failureThreshold: 10000
      volumes:
        - name: config-volume
          configMap:
            name: tc-configs
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
    - metadata:
        name: dataroots
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
---

apiVersion: v1
kind: Service
metadata:
  name: tmc
  namespace: swag-infra
spec:
  ports:
  - name: tmc-port
    port: 9480
  type: LoadBalancer
  selector:
    app: tmc

---

apiVersion: v1
kind: Service
metadata:
  name: tmc-internal
  namespace: swag-infra
  labels:
    app: tmc
spec:
  ports:
  - name: tmc-port
    port: 9480
  clusterIP: None
  selector:
    app: tmc

---


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tmc
  namespace: swag-infra
spec:
  selector:
    matchLabels:
      app: tmc
  serviceName: tmc-internal
  replicas: 1
  template:
    metadata:
      labels:
        app: tmc
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kops.k8s.io/instancegroup
                operator: In
                values:
                - clientnodes
      containers:
        - image: store/softwareag/tmc:10.11
          name: tmc
          imagePullPolicy: Always
          ports:
            - containerPort: 9480
          volumeMounts:
            - name: tmcdata
              mountPath: /data/tmc/
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
    - metadata:
        name: tmcdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Gi
